# pygme

./: .coveragerc  .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  bitbucket-pipelines.yml  env.yml  env_pygme.yml  pyproject.toml  replace.sh  setup.cfg  setup.py
.azure_devops/: azure-pipelines.yml
.circleci/: config.yml
.github/workflows/: python-package-conda.yml
examples/: E01_calibrating_gr4j.py  calibrating_gr4j.py  run_all_examples.py
paramslib/scripts/: calmodel.job  calmodel.ps1  calmodel.py  calmodel_process_and_plot.py  calsac.job  calsac.py  calsac_process_and_plot.py
pygme/: __init__.py  _version.py  calibration.py  compositemodel.py  data.py  factory.py  forecastmodel.py  model.py
pygme/models/: ann.py  basics.py  c_basics.c  c_basics.h  c_demand.c  c_demand.h  c_gr2m.c  c_gr2m.h  (+49 more)
tests/: dummy.py  get_ihacres.r  get_obs_data.py  get_sim_TUWmodel.r  get_sim_airGR.r  get_sim_airGR_606002.r  hayami_kernel_limits.py  test_data_gr6j.r  test_pygme_ann.py  test_pygme_basics.py  test_pygme_calibration.py  test_pygme_compositemodel.py  test_pygme_data.py  test_pygme_demand.py  test_pygme_factory.py  test_pygme_forecastmodel.py  test_pygme_gr2m.py  test_pygme_gr4j.py  test_pygme_gr6j.py  test_pygme_hayami.py  test_pygme_hbv.py  test_pygme_ihacres.py  test_pygme_knn.py  test_pygme_knndaily.py  test_pygme_lagroute.py  test_pygme_model.py  test_pygme_node.py  test_pygme_patterns.py  test_pygme_sac15.py  test_pygme_turcmezentsev.py  test_pygme_utils.py  test_pygme_wapaba.py  test_useme_ann.py  test_useme_calibration.py  test_useme_errfun.py  test_useme_gr2m.py  test_useme_gr4j.py  test_useme_lagroute.py  test_useme_model.py  test_useme_turcmezentsev.py  (+1 more)
useme/: calibration.py  forecastmodel.py  model.py
(+141 files in other folders)
