[build-system]
requires = [
    "setuptools >= 64",
    "cython >= 3.0.10",
    "numpy >= 1.20.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pygme"
version = "3.1"
authors = [{name = "Julien Lerat, CSIRO Environment", email="julien.lerat@csiro.au"}]
description = "Python General Model Engine (PyGME): Run and calibrate models used in environmental sciences"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["data processing", "rainfall", "streamflow", "rainfall-runoff", "hydrology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python 3",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Hydrology"
]    
requires-python = ">= 3.8"

dependencies = [
    "setuptools",
    "numpy>=1.20.0",
    "scipy>=1.0.0",
    "pandas>=2.0.0",
    "cython>=3.2.4",
    "pip>=25.0.1",
    "hydrodiy"
]

[dependency-groups]
dev = [
    "anybadge>=1.16.0",
    "ruff>=0.15.12",
    "pytest>=8.3.5",
    "pytest-allclose>=1.0.0",
    "pytest-cov>=5.0.0"
]
explore = [
    "ipython",
    "sympy",
    "matplotlib",
]


[project.urls]
Homepage = "https://github.com/csiro-hydroinformatics/pygme"
Repository = "https://github.com/csiro-hydroinformatics/pygme"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.c", "*.h"]

[tool.uv]
no-build-isolation-package = ["pygme"]
default-groups = []

[tool.uv.sources]
hydrodiy = { git = "https://github.com/csiro-hydroinformatics/hydrodiy" }
